--- a/static/scss/partials/_variables.scss
+++ b/static/scss/partials/_variables.scss
@@ -20,6 +20,7 @@ $color-gray--dark: #d9d9d9;
 $color-black: #102525;
 $color-white: #ffffff;
 $color-red: #ef4444;
+$color-green: #1fc556;
 
 // =============================================================================
 // Text
