--- a/templates/background-gradient.html
+++ b/templates/background-gradient.html
@@ -24,7 +24,7 @@
                 <!-- Settings -->
                 <div class="tools-options__settings tools-options__settings--{{ active_page }}">
                     <!-- gradient-type -->
-                    <select class="custom-select" id="switch-type">
+                    <select id="switch-type">
                         <option value="">Gradient type</option>
                         <option value="radial">Radial</option>
                         <option value="linear">Linear</option>
@@ -32,7 +32,7 @@
                         <option value="repeating-linear">Repeating Linear</option>
                     </select>
                     <!-- gradient-direction -->
-                    <select class="custom-select" id="switch-angle">
+                    <select id="switch-angle">
                         <option value="">Gradient direction</option>
                         <option value="top">Top</option>
                         <option value="bottom">Bottom</option>
