--- a/templates/background-noise.html
+++ b/templates/background-noise.html
@@ -24,13 +24,13 @@
                 <!-- Settings -->
                 <div class="tools-options__settings tools-options__settings--{{ active_page }}">
                     <!-- noise-opacity -->
-                    <input type="number" class="form-control" aria-label="noise-opacity" aria-describedby="noise-opacity-description" min="0" max="1" value="0" step="0.05">
+                    <input type="number" aria-label="noise-opacity" aria-describedby="noise-opacity-description" min="0" max="1" step="0.05" placeholder="Noise opacity">
                     <input type="range" class="custom-range w-100" id="noise-opacity" min="0" max="1" value="0" step="0.05">
                     <!-- noise-density -->
-                    <input type="number" class="form-control" aria-label="noise-density" aria-describedby="noise-density-description" min="1" max="100" value="100">
+                    <input type="number" aria-label="noise-density" aria-describedby="noise-density-description" min="1" max="100" placeholder="Noise density">
                     <input type="range" class="custom-range w-100" id="noise-density" min="1" max="100" value="100">
                     <!-- background-color -->
-                    <input type="color" id="background-color" class="form-control" aria-label="background-color" aria-describedby="background-color-description">
+                    <input type="color" id="background-color" aria-label="background-color" aria-describedby="background-color-description">
                 </div>
         
                 <!-- Code result -->
