--- a/static/scss/components/_tools.scss
+++ b/static/scss/components/_tools.scss
@@ -13,15 +13,18 @@
 
     // Result
     &-result {
-        @include position(relative);
+        @include position(sticky, $t: 0);
 
         height: em(216);
         padding: em(48) em(32) em(32);
         margin-bottom: em(40);
         border-radius: $border-radius * 2;
+        box-shadow: 0 em(-32) 0 em(8) $color-gray--light;
         overflow: hidden;
 
         background-color: $color-black;
+
+        z-index: 1;
         // Reset button
         &__reset {
             @include position(absolute, $t: 0, $r: 0);
@@ -85,6 +88,8 @@
 
         // badge
         &__view {
+            @include flex($ai: center, $jc: center);
+
             width: 100%;
             height: 100%;
             border-radius: $border-radius;
@@ -102,10 +107,97 @@
         &__settings {
             // Backrgound gradient
             &--background-gradient {
-                @include grid($gc: minmax(0, 1fr) minmax(0, 1fr), $gg: em(24));
+                @include grid($gc: repeat(2, minmax(0, 1fr)), $gg: em(24));
                 #grapick {
                     @include grid-child($gcs: 1, $gce: 3);
                 }
+            }
+            // Background noise
+            &--background-noise,
+            &--box-shadow {
+                input[type='number'] {
+                    margin-bottom: em(16);
+                }
+                input[type='range'] {
+                    margin-bottom: em(24);
+                }
+            }
+            // Box shadow
+            &--box-shadow {
+                @include grid($gc: repeat(2, minmax(0, 1fr)), $gg: em(24));
+                .background-color,
+                .switch {
+                    @include grid-child($gcs: 1, $gce: 3);
+                }
+                .switch {
+                    margin-bottom: em(24);
+                }
+                .opacity {
+                    @include flex($ai: flex-end);
+
+                    height: em(56);
+                }
+            }
+            // Border radius
+            &--border-radius {
+                @include grid($gc: repeat(2, minmax(0, 1fr)), $gg: em(24));
+                input[type='color'],
+                select {
+                    @include grid-child($gcs: 1, $gce: 3);
+                }
+                input[type='number'] {
+                    margin-bottom: em(16);
+                }
+            }
+            // CSS arrow
+            &--css-arrow {
+                @include grid($gc: minmax(0, 1fr), $gg: em(24));
+                input[type='number'] {
+                    margin-bottom: em(16);
+                }
+            }
+            // Text gradient
+            &--text-gradient {
+                @include grid($gc: repeat(2, minmax(0, 1fr)), $gg: em(24));
+                > input,
+                div {
+                    @include grid-child($gcs: 1, $gce: 3);
+                }
+                input[type='number'] {
+                    margin-bottom: em(16);
+                }
+            }
+            // Text gradient
+            &--text-shadow {
+                @include grid($gc: repeat(2, minmax(0, 1fr)), $gg: em(24));
+                input[type='text'],
+                .background-color,
+                .blur {
+                    @include grid-child($gcs: 1, $gce: 3);
+                }
+                .opacity {
+                    @include flex($ai: center);
+
+                    height: em(56);
+                }
+                input[type='number'] {
+                    margin-bottom: em(16);
+                }
+            }
+            // Font styler
+            &--font-styler {
+                @include grid($gc: repeat(2, minmax(0, 1fr)), $gg: em(24));
+                *:nth-last-child(-n+3),
+                input[type='text'] {
+                    @include grid-child($gcs: 1, $gce: 3);
+                }
+                input[type='number'] {
+                    margin-bottom: em(16);
+                }
+            }
+            // Font face
+            &--font-face {
+                @include grid($gc: minmax(0, 1fr), $gg: em(24));
             }
         }
 
@@ -121,6 +213,8 @@
             // Code view
             .hljs {
                 padding: em(48) em(32) em(32);
+
+                background-color: $color-black;
 
                 white-space: break-spaces;
             }
