--- a/templates/box-shadow.html
+++ b/templates/box-shadow.html
@@ -2,5 +2,81 @@
 {% set active_page = "box-shadow" %}
 
 {% block main %}
-    <p>{{ active_page }}</p>
+        <!-- Adds -->
+        <div class="ads"></div>
+
+        <!-- Title -->
+        <header class="tools-header">
+            <h1 class="tools-header__title">Box shadow generator</h1>
+        </header>
+
+        <!-- Result -->
+        <section id="{{ active_page }}-results-container" class="tools-result">
+            <!-- Reset button -->
+            <button class="tools-result__reset reset">Reset view</button>
+            <span class="tools-result__badge">View</span>
+            <div id="{{ active_page }}-results" class="tools-result__view"></div>
+        </section>
+
+        <section class="tools-container">
+            <!-- Options -->
+            <section class="tools-options">
+                <!-- Settings -->
+                <div class="tools-options__settings tools-options__settings--{{ active_page }}">
+                    <!-- box-shadow-horizontal -->
+                    <div>
+                        <input type="number" aria-label="box-shadow-horizontal" aria-describedby="box-shadow-horizontal-description" min="-200" max="200" placeholder="Box shadow horizontal">
+                        <input type="range" class="custom-range w-100" id="box-shadow-horizontal" min="-200" max="200" value="0">
+                    </div>
+                    <!-- box-shadow-vertical -->
+                    <div>
+                        <input type="number" aria-label="box-shadow-vertical" aria-describedby="box-shadow-vertical-description" min="-200" max="200" placeholder="Box shadow vertical">
+                        <input type="range" class="custom-range w-100" id="box-shadow-vertical" min="-200" max="200" value="0">
+                    </div>
+                    <!-- box-shadow-blur -->
+                    <div>
+                        <input type="number" aria-label="box-shadow-blur" aria-describedby="box-shadow-blur-description" min="0" max="200" placeholder="Blur">
+                        <input type="range" class="custom-range w-100" id="box-shadow-blur" min="0" max="200" value="0">
+                    </div>
+                    <!-- box-shadow-spread -->
+                    <div>
+                        <input type="number" aria-label="box-shadow-spread" aria-describedby="box-shadow-spread-description" min="-200" max="200" placeholder="Spread">
+                        <input type="range" class="custom-range w-100" id="box-shadow-spread" min="-200" max="200" value="0">
+                    </div>
+                    <!-- box-shadow-position -->
+                    <div class="switch">
+                        <!-- Checkbox -->
+                        <input type="checkbox" class="switch__checkbox" id="box-shadow-position">
+                        
+                        <!-- Button -->
+                        <label for="box-shadow-position" class="switch__label"></label>
+                        
+                        <!-- Text -->
+                        <span class="switch__text"></span>
+                    </div>
+                    <!-- box-shadow-color -->
+                    <input type="color" id="box-shadow-color" aria-label="box-shadow-color" aria-describedby="box-shadow-color-description">
+                    <!-- box-shadow-opacity -->
+                    <div class="opacity">
+                        <input type="hidden" aria-label="box-shadow-opacity" aria-describedby="box-shadow-opacity-description" min="0" max="1" step="0.01" placeholder="Opacity">
+                        <input type="range" class="custom-range w-100" id="box-shadow-opacity" min="0" max="1" value="1" step="0.01">
+                    </div>
+                    <!-- background-color -->
+                    <input type="color" id="background-color" aria-label="background-color" aria-describedby="background-color-description" class="background-color">
+                </div>
+        
+                <!-- Code result -->
+                <div id="code-result-container" class="tools-options__code"></div>
+    
+                <!-- Description -->
+                <article class="box">
+                    <h2 class="box__title">Box shadow</h2>
+                    <p class="box__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec accumsan fermentum dui, non sodales ipsum hendrerit ut. Proin maximus elit et libero rhoncus sagittis. Donec gravida augue eu dui feugiat, sed dignissim mi ultrices. Quisque ultrices metus et enim dignissim dictum. Morbi et purus ac tellus sodales tincidunt. Fusce vestibulum aliquet lectus ac ultrices. Curabitur id ligula vitae nisi luctus tempor sit amet at odio. Vestibulum ante ipsum primis.</p>
+                </article>
+            </section>
+
+            <!-- Ads -->
+            <section class="ads"></section>
+        </section>
+    </div>
 {% endblock %}
