--- a/templates/css-arrow.html
+++ b/templates/css-arrow.html
@@ -2,5 +2,95 @@
 {% set active_page = "css-arrow" %}
 
 {% block main %}
-    <p>{{ active_page }}</p>
+        <!-- Adds -->
+        <div class="ads"></div>
+
+        <!-- Title -->
+        <header class="tools-header">
+            <h1 class="tools-header__title">CSS Arrow generator</h1>
+        </header>
+
+        <!-- Result -->
+        <section id="{{ active_page }}-results-container" class="tools-result">
+            <!-- Reset button -->
+            <button class="tools-result__reset reset">Reset view</button>
+            <span class="tools-result__badge">View</span>
+            <div id="{{ active_page }}-results" class="tools-result__view arrowBox"></div>
+        </section>
+
+        <section class="tools-container">
+            <!-- Options -->
+            <section class="tools-options">
+                <!-- Settings -->
+                <div class="tools-options__settings tools-options__settings--{{ active_page }}">
+                    <!-- arrow-direction -->
+                    <div class="radio__group">
+                        <!-- Radio top -->
+                        <label class="radio__container">
+                            <div class="radio__button">
+                                <input type="radio" name="arrow-direction" id="top" value="top" class="radio__button__hide">
+                                <span class="radio__button__checkmark"></span>
+                            </div>
+                            <span class="radio__text">Top</span>
+                        </label>
+                        <!-- Radio right -->
+                        <label class="radio__container">
+                            <div class="radio__button">
+                                <input type="radio" name="arrow-direction" id="right" value="right" class="radio__button__hide">
+                                <span class="radio__button__checkmark"></span>
+                            </div>
+                            <span class="radio__text">Right</span>
+                        </label>
+                        <!-- Radio bottom -->
+                        <label class="radio__container">
+                            <div class="radio__button">
+                                <input type="radio" name="arrow-direction" id="bottom" value="bottom" class="radio__button__hide">
+                                <span class="radio__button__checkmark"></span>
+                            </div>
+                            <span class="radio__text">Bottom</span>
+                        </label>
+                        <!-- Radio left -->
+                        <label class="radio__container">
+                            <div class="radio__button">
+                                <input type="radio" name="arrow-direction" id="left" value="left" class="radio__button__hide">
+                                <span class="radio__button__checkmark"></span>
+                            </div>
+                            <span class="radio__text">Left</span>
+                        </label>
+                    </div>
+                    <!-- arrow-size -->
+                    <div>
+                        <input type="number" aria-label="arrow-size" aria-describedby="arrow-size-description" min="0" max="100" placeholder="Arrow size">
+                        <input type="range" class="custom-range w-100" id="arrow-size" min="0" max="100" value="30">
+                    </div>
+                    <!-- arrow-border-width -->
+                    <div>
+                        <input type="number" aria-label="arrow-border-width" aria-describedby="arrow-border-width-description" min="0" max="100" placeholder="Border width">
+                        <input type="range" class="custom-range w-100" id="arrow-border-width" min="0" max="100" value="4">
+                    </div>
+                    <!-- arrow-position -->
+                    <div>
+                        <input type="number" aria-label="arrow-position" aria-describedby="arrow-position-description" min="0" max="100" placeholder="Arrow position">
+                        <input type="range" class="custom-range w-100" id="arrow-position" min="0" max="100" value="50">
+                    </div>
+                    <!-- arrow-color -->
+                    <input type="color" id="arrow-color" aria-label="background-color" aria-describedby="arrow-color-description">
+                    <!-- arrow-border-color -->
+                    <input type="color" id="arrow-border-color" aria-label="background-color" aria-describedby="arrow-border-color-description">
+                </div>
+        
+                <!-- Code result -->
+                <div id="code-result-container" class="tools-options__code"></div>
+    
+                <!-- Description -->
+                <article class="box">
+                    <h2 class="box__title">CSS Arrow</h2>
+                    <p class="box__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec accumsan fermentum dui, non sodales ipsum hendrerit ut. Proin maximus elit et libero rhoncus sagittis. Donec gravida augue eu dui feugiat, sed dignissim mi ultrices. Quisque ultrices metus et enim dignissim dictum. Morbi et purus ac tellus sodales tincidunt. Fusce vestibulum aliquet lectus ac ultrices. Curabitur id ligula vitae nisi luctus tempor sit amet at odio. Vestibulum ante ipsum primis.</p>
+                </article>
+            </section>
+
+            <!-- Ads -->
+            <section class="ads"></section>
+        </section>
+    </div>
 {% endblock %}
