--- a/templates/text-shadow.html
+++ b/templates/text-shadow.html
@@ -2,5 +2,77 @@
 {% set active_page = "text-shadow" %}
 
 {% block main %}
-    <p>{{ active_page }}</p>
+        <!-- Adds -->
+        <div class="ads"></div>
+
+        <!-- Title -->
+        <header class="tools-header">
+            <h1 class="tools-header__title">Text shadow generator</h1>
+        </header>
+
+        <!-- Result -->
+        <section id="{{ active_page }}-results-container" class="tools-result">
+            <!-- Reset button -->
+            <button class="tools-result__reset reset">Reset view</button>
+            <span class="tools-result__badge">View</span>
+            <div id="{{ active_page }}-results" class="tools-result__view" style="font-size: 78px; font-weight: bold;">Sample text</div>
+        </section>
+
+        <section class="tools-container">
+            <!-- Options -->
+            <section class="tools-options">
+                <!-- Settings -->
+                <div class="tools-options__settings tools-options__settings--{{ active_page }}">
+                    <!-- Edit text -->
+                    <input type="text" aria-label="text-edit" aria-describedby="text-edit-description" min="-10" max="10" placeholder="Write something...">
+                    <!-- text-size -->
+                    <div>
+                        <input type="number" aria-label="text-size" aria-describedby="text-size-description" min="0" max="100" placeholder="Font size">
+                        <input type="range" class="custom-range w-100" id="text-size" min="0" max="100" value="78">
+                    </div>
+                    <!-- text-size -->
+                    <div>
+                        <input type="number" aria-label="text-line-height" aria-describedby="text-line-height-description" min="0.7" max="2" step="0.1" placeholder="Line height">
+                        <input type="range" class="custom-range w-100" id="text-line-height" min="0.7" max="2" step="0.1" value="1">
+                    </div>
+                    <!-- text-color -->
+                    <input type="color" id="text-color" aria-label="background-color" aria-describedby="text-color-description" class="background-color">
+                    <!-- text-shadow-horizontal -->
+                    <div>
+                        <input type="number" aria-label="text-shadow-horizontal" aria-describedby="text-shadow-horizontal-description" min="-10" max="10" placeholder="Text shadow horizontal">
+                        <input type="range" class="custom-range w-100" id="text-shadow-horizontal" min="-10" max="10" value="0">
+                    </div>
+                    <!-- text-shadow-vertical -->
+                    <div>
+                        <input type="number" aria-label="text-shadow-vertical" aria-describedby="text-shadow-vertical-description" min="-10" max="10" placeholder="Text shadow vertical">
+                        <input type="range" class="custom-range w-100" id="text-shadow-vertical" min="-10" max="10" value="0">
+                    </div>
+                    <!-- text-shadow-blur -->
+                    <div class="blur">
+                        <input type="number" aria-label="text-shadow-blur" aria-describedby="text-shadow-blur-description" min="0" max="10" placeholder="Blur">
+                        <input type="range" class="custom-range w-100" id="text-shadow-blur" min="0" max="10" value="0">
+                    </div>
+                    <!-- text-shadow-color -->
+                    <input type="color" id="text-shadow-color" aria-label="text-shadow-color" aria-describedby="text-shadow-color-description">
+                    <!-- text-shadow-opacity -->
+                    <div class="opacity">
+                        <input type="hidden" aria-label="text-shadow-opacity" aria-describedby="text-shadow-opacity-description" min="0" max="1" step="0.01" placeholder="Opacity">
+                        <input type="range" class="custom-range w-100" id="text-shadow-opacity" min="0" max="1" value="0" step="0.01">
+                    </div>
+                </div>
+        
+                <!-- Code result -->
+                <div id="code-result-container" class="tools-options__code"></div>
+    
+                <!-- Description -->
+                <article class="box">
+                    <h2 class="box__title">Text shadow</h2>
+                    <p class="box__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec accumsan fermentum dui, non sodales ipsum hendrerit ut. Proin maximus elit et libero rhoncus sagittis. Donec gravida augue eu dui feugiat, sed dignissim mi ultrices. Quisque ultrices metus et enim dignissim dictum. Morbi et purus ac tellus sodales tincidunt. Fusce vestibulum aliquet lectus ac ultrices. Curabitur id ligula vitae nisi luctus tempor sit amet at odio. Vestibulum ante ipsum primis.</p>
+                </article>
+            </section>
+
+            <!-- Ads -->
+            <section class="ads"></section>
+        </section>
+    </div>
 {% endblock %}
